quiz for August

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="mathQuiz" ng-controller="QuizController">
-			<h1>All Gifted Adaptive Achievement Test<span>Math</span></h1>
+			<h1>All Gifted Adaptive Test<span>Math</span></h1>
 			<div class="progress">
 				<div class="
 				{{($index === activeQuestion) ? 'on':'off'}}
