--- a/index.html
+++ b/index.html
@@ -6,19 +6,8 @@
 		<title>Adaptive Math Test</title>
 		<link rel="stylesheet" type="text/css" href="css/quiz.css">
 		<!-- Auth0's lock widget library -->
-		<script type="text/javascript" src="https://cdn.auth0.com/js/lock-7.12.min.js"></script>
-		<!-- AngularJS core -->
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
-		<!-- Angular cookie wrapper library for client cookies -->
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-cookies.js"></script>
-		<!-- Angular's Router Library for SPA -->
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-route.js"></script>
-		<!-- Auth0's Angular SDK Library -->
-		<script type="text/javascript" src="https://cdn.auth0.com/w2/auth0-angular-4.js"></script>
-		<!-- Angular wrapper for localStorage and sessionStorage. Defaults to ng-cookies if not available -->
-		<script src="http://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
-		<!-- Angular wrapper library for JWT-->
-		<script src="http://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
+		<script type="text/javascript" src="https://cdn.auth0.com/js/lock-9.2.min.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	</head>
 	<body>
 		<div id="mathQuiz" ng-controller="QuizController">
@@ -59,11 +48,22 @@
 			<div class="results  {{(totalQuestions === activeQuestion) ? 'active' : 'inactive'}}">
 				<h3>Results</h3>
 				<p>You scored {{percentage}}% by correctly answering {{score}} of the total {{totalQuestions}} questions.</p>
-				<p>Use the links below to challenge your friends.</p>
+				<p>Use the links below to report your achievement.</p>
 				<div class="share" ng-bind-html = "createShareLinks(percentage)"></div>
+				<div><a ng-click="logout()" class="btn end" href="#">End Test</a></div>
 			</div>
 		</div>
-	<!--script type="text/javascript" src="js/angular.min.js"></script-->
+	<script type="text/javascript" src="js/angular.min.js"></script>
+	<!-- Angular cookie wrapper library for client cookies -->
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-cookies.js"></script>
+	<!-- Angular's Router Library for SPA -->
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-route.js"></script>
+	<!-- Auth0's Angular SDK Library -->
+	<script type="text/javascript" src="https://cdn.auth0.com/w2/auth0-angular-4.js"></script>
+	<!-- Angular wrapper for localStorage and sessionStorage. Defaults to ng-cookies if not available -->
+	<script src="http://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
+	<!-- Angular wrapper library for JWT-->
+	<script src="http://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
 	<script type="text/javascript" src='js/quiz.js'></script>		
 
 	</body>
