--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Adaptive Math Test</title>
 		<link rel="stylesheet" type="text/css" href="css/quiz.css">
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/katex.min.css">
 		<!-- Auth0's lock widget library -->
 		<script type="text/javascript" src="https://cdn.auth0.com/js/lock-9.2.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -20,26 +21,27 @@
 				ng-repeat="myQuestion in myQuestions"></div>
 			</div>
 			<div class="intro {{ (activeQuestion > -1) ? 'inactive' :'active'}}">
-				<h2>Welcome</h2>
+				<h2>Welcome</h2> <!-- Use auto-render -->
 					<p>Click begin to start your Math test</p>
 					<div ng-click="login()" class="btn">Begin</div>
 			</div>
 			<div class="question 
 				{{ $index === activeQuestion ? 'active':'inactive'}} {{ myQuestion.questionState === 'answered' ? 'answered':'unanswered'}}" ng-repeat="myQuestion in myQuestions">
-				<p class="txt">
-					{{ myQuestion.question }}
-				</p>
-				<p ng-if="myQuestion.question_image" class="question_image" ng-style="{ 'background-image':'url({{myQuestion.question_image}})' }">
-				</p>
+				<p katex bind="myQuestion.question" auto-render class="txt"></p>
+				<p><img ng-if="myQuestion.question_image" class="question_image" src="{{myQuestion.question_image}}" /></p>
 				<p class="ans" 
 					ng-class="{
 						image:Answer.image,
 						selected: isSelected($parent.$index, $index),
 						correct: isCorrect($parent.$index, $index)
 					}" 
+					ng-show = "Answer.text != null || Answer.image != null"
 					ng-style="{ 'background-image':'url({{Answer.image}})'}"
-					ng-repeat="Answer in myQuestions[$index].answers"  
-					ng-click="selectAnswer($parent.$index, $index)">{{ Answer.text }}</p>
+					ng-repeat="Answer in myQuestions[$index].answers" 
+					ng-click="selectAnswer($parent.$index, $index)">
+					{{ Answer.text }}
+				</p>
+
 				<div class="feedback">
 					<p ng-show="myQuestion.correctness === 'correct'">You are <strong>correct</strong>!</p>
 					<p ng-show="myQuestion.correctness === 'incorrect'">Oops! That is <strong>not correct.</strong></p>
@@ -66,7 +68,17 @@
 	<script src="http://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
 	<!-- Angular wrapper library for JWT-->
 	<script src="http://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/katex.min.js"></script>
+	<script type="text/javascript" src="node_modules/angular-katex/angular-katex.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/contrib/auto-render.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
+    <script>
+    renderMathInElement(document.body);
+    </script>
 	<script type="text/javascript" src='js/quiz.js'></script>		
+  <script src="//tfoxy.github.io/b/katex/dist/katex.min.js"></script>
+  <script src="//tfoxy.github.io/b/katex/dist/contrib/auto-render.min.js"></script>
+  <script src="//tfoxy.github.io/b/angular-katex/angular-katex.min.js"></script>
 
 	</body>
 </html>
