--- a/index.html
+++ b/index.html
@@ -27,21 +27,28 @@
 			</div>
 			<div class="question 
 				{{ $index === activeQuestion ? 'active':'inactive'}} {{ myQuestion.questionState === 'answered' ? 'answered':'unanswered'}}" ng-repeat="myQuestion in myQuestions">
-				<p katex bind="myQuestion.question" auto-render class="txt"></p>
-				<p><img ng-if="myQuestion.question_image" class="question_image" src="{{myQuestion.question_image}}" /></p>
-				<p class="ans" 
-					ng-class="{
-						image:Answer.image,
-						selected: isSelected($parent.$index, $index),
-						correct: isCorrect($parent.$index, $index)
-					}" 
-					ng-show = "Answer.text != null || Answer.image != null"
-					ng-style="{ 'background-image':'url({{Answer.image}})'}"
-					ng-repeat="Answer in myQuestions[$index].answers" 
-					ng-click="selectAnswer($parent.$index, $index)">
-					{{ Answer.text }}
-				</p>
-
+				<div katex bind="myQuestion.question" auto-render class="txt"></div>
+				<p><img ng-if="myQuestion.question_image" class="question_image" src="{{baseurl}}{{myQuestion.question_image}}" /></p>
+				<div ng-show="myQuestion.type == 1">
+					<div katex bind="Answer.text" auto-render
+						ng-repeat="Answer in myQuestions[$index].answers"
+						ng-show = "Answer.text != null || Answer.image != null"
+						ng-style="{ 'background-image':'url({{baseurl}}{{Answer.image}})'}"
+						ng-class="{
+							image:Answer.image,
+							selected: isSelected($parent.$index, $index),
+							correct: isCorrect($parent.$index, $index)
+						}" 
+						ng-click="selectAnswer($parent.$index, $index)"
+						class="ans"></div>						
+				</div>
+				<div ng-show="myQuestion.type == 2">
+					<input type="number" required
+					ng-show = "Answer.text != null"
+					ng-repeat="Answer in myQuestions[$index].answers" placeholder="Your Answer for ({{$index+1}})"
+					ng-model="myAnswers.answer[$parent.$index][$index]" class="keyans"/>
+					<p ng-click="selectAnswer($index,0)" class="keybtn">Submit</p>
+				</div>
 				<div class="feedback">
 					<p ng-show="myQuestion.correctness === 'correct'">You are <strong>correct</strong>!</p>
 					<p ng-show="myQuestion.correctness === 'incorrect'">Oops! That is <strong>not correct.</strong></p>
@@ -57,28 +64,35 @@
 				<div><a ng-click="logout()" class="btn end" href="#">End Test</a></div>
 			</div>
 		</div>
-	<script type="text/javascript" src="js/angular.min.js"></script>
-	<!-- Angular cookie wrapper library for client cookies -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-cookies.js"></script>
-	<!-- Angular's Router Library for SPA -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-route.js"></script>
-	<!-- Auth0's Angular SDK Library -->
-	<script type="text/javascript" src="https://cdn.auth0.com/w2/auth0-angular-4.js"></script>
-	<!-- Angular wrapper for localStorage and sessionStorage. Defaults to ng-cookies if not available -->
-	<script src="http://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
-	<!-- Angular wrapper library for JWT-->
-	<script src="http://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/katex.min.js"></script>
-	<script type="text/javascript" src="node_modules/angular-katex/angular-katex.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/contrib/auto-render.min.js" type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="js/angular.min.js"></script>
+		<!-- Angular cookie wrapper library for client cookies -->
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-cookies.js"></script>
+		<!-- Angular's Router Library for SPA -->
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-route.js"></script>
+		<!-- Auth0's Angular SDK Library -->
+		<script type="text/javascript" src="https://cdn.auth0.com/w2/auth0-angular-4.js"></script>
+		<!-- Angular wrapper for localStorage and sessionStorage. Defaults to ng-cookies if not available -->
+		<script src="http://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
+		<!-- Angular wrapper library for JWT-->
+		<script src="http://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
+	    <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
+		<script type="text/javascript" src='js/quiz.js'></script>		
+	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/katex.min.js"></script>
+	    <script src="//tfoxy.github.io/b/katex/dist/contrib/auto-render.min.js"></script>
+	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/katex.min.js"></script>
+	    <script src="//tfoxy.github.io/b/katex/dist/contrib/auto-render.min.js"></script>
+	    <script src="//tfoxy.github.io/b/angular-katex/angular-katex.min.js"></script>
     <script>
-    renderMathInElement(document.body);
-    </script>
-	<script type="text/javascript" src='js/quiz.js'></script>		
-  <script src="//tfoxy.github.io/b/katex/dist/katex.min.js"></script>
-  <script src="//tfoxy.github.io/b/katex/dist/contrib/auto-render.min.js"></script>
-  <script src="//tfoxy.github.io/b/angular-katex/angular-katex.min.js"></script>
-
-	</body>
+      renderMathInElement(
+          document.body,
+          {
+              delimiters: [
+                  {left: "$$", right: "$$", display: true},
+                  {left: "\\[", right: "\\]", display: true},
+                  {left: "$", right: "$", display: false},
+                  {left: "\\(", right: "\\)", display: false}
+              ]
+          }
+      );
+    </script>	</body>
 </html>
