--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</div>
 			<div class="results  {{(totalQuestions === activeQuestion) ? 'active' : 'inactive'}}">
 				<h3>Results</h3>
-				<p>You scored {{percentage}}% by correctly answering {{score}} of the total {{totalQuestions}} questions.</p>
+				<p>You scored {{percentage}}% for the latest test<span ng-if="maxile > 0">, and now your maxile level is {{maxile}}</span>.</p>
 				<p>Use the links below to report your achievement.</p>
 				<div class="share" ng-bind-html = "createShareLinks(percentage)"></div>
 				<div><a ng-click="logout()" class="btn end" href="#">End Test</a></div>
