--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<!-- dependency: React.js -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-with-addons.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
-		<script type="text/javascript" src="js/literallycanvas.js"></script>
+		<script type="text/javascript" src="js/literallycanvas.min.js"></script>
 	    <script>
 	        LC.init(
 	            document.getElementsByClassName('my-drawing')[0],
