--- a/index.html
+++ b/index.html
@@ -8,28 +8,42 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/katex.min.css">
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 		<!-- Auth0's lock widget library -->
+		<link href="/css/literallycanvas.css" rel="stylesheet">
 		<script type="text/javascript" src="https://cdn.auth0.com/js/lock-9.2.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="icon" href="/faith.png">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script>
+			$(document).ready(function(){
+				$('#mastercodeunenroll').removeClass("visibilityhide");
+				$('#scientificCalc11').removeClass("visibilityhide");
+				$('#scratchpadshow').removeClass("visibilityhide");
+				$('#mathquestionshow').removeClass("visibilityhide");
+				$('#resultshow').removeClass("visibilityhide");
+				$('#progressshow').removeClass("visibilityhide");
+			});			
+		</script>
 	</head>
 	<body>
 	<span us-spinner="{radius:30, width:8, length: 16}"></span>
 		<div id="mathQuiz" ng-controller="QuizController">
-			<h1>All Gifted<span>Mathematics</span></h1>
-			<div class="progress">
-				<div class="
-				{{($index === activeQuestion) ? 'on':'off'}}
-				{{ (myQuestion.questionState === 'answered') ? 'answered' : 'unanswered'}} 
-				{{ (myQuestion.correctness === 'correct') ? 'correct' : 'incorrect'}}"
-				ng-repeat="myQuestion in myQuestions"></div>
+			<div ng-show="scratchpad" class="my-drawing visibilityhide" id="scratchpadshow"></div>				
+			<div class="header"><h1>All Gifted<span>Mathematics</span></h1>
+				<div class="progress visibilityhide" id="progressshow">
+					<div class="
+					{{($index === activeQuestion) ? 'on':'off'}}
+					{{ (myQuestion.questionState === 'answered') ? 'answered' : 'unanswered'}} 
+					{{ (myQuestion.correctness === 'correct') ? 'correct' : 'incorrect'}}"
+					ng-repeat="myQuestion in myQuestions"></div>
+				</div>
 			</div>
 			<div class="intro {{ (activeQuestion > -1) ? 'inactive' :'active'}}">
-				<div ng-if="!unenrolled">
+				<div ng-if="enrolled">
 					<h2>Welcome</h2>
  					<p>Click to start Adaptive Kindergarten to Primary Six Math course</p>
  					<div ng-click="login()" class="startbtn">START <i class="fa fa-chevron-right"></i></div>
 				</div>
-				<div ng-if="unenrolled">
+				<div ng-if="!enrolled" class="visibilityhide" id="mastercodeunenroll">
 					<h3>Mastercode Registration Needed<br> <input type="number" class="mastercode" ng-model="mastercode.mastercode" placeholder="Mastercode"></h3>
 					<p><input type="text" ng-model = "mastercode.firstname" placeholder="First Name" class="mastercode" required>
 					<input type="text" ng-model = "mastercode.lastname" placeholder="Last Name" class="mastercode" required>
@@ -38,8 +52,8 @@
 				</div>
 			</div>
 			<div class="question 
-				{{ $index === activeQuestion ? 'active':'inactive'}} {{ myQuestion.questionState === 'answered' ? 'answered':'unanswered'}}" ng-repeat="myQuestion in myQuestions" ng-show="questionshowing($index)" >
-				<div katex bind="myQuestion.question" auto-render class="txt" ></div>
+				{{ $index === activeQuestion ? 'active':'inactive'}} {{ myQuestion.questionState === 'answered' ? 'answered':'unanswered'}} visibilityhide" ng-repeat="myQuestion in myQuestions" ng-show="questionshowing($index)" id="mathquestionshow">
+				<div katex bind="myQuestion.question" auto-render class="txt" id="question_{{myQuestion.id}}"></div>
 				<p><img ng-if="myQuestion.question_image" class="question_image" ng-src="{{baseurl}}{{myQuestion.question_image}}" onContextMenu="return false;"/></p>
 				<div ng-show="myQuestion.type == 1">
 					<div katex bind="Answer.text" auto-render
@@ -54,11 +68,7 @@
 						ng-click="selectAnswer($parent.$index, $index)"
 						class="ans"></div>						
 				</div>
-				<div ng-show="myQuestion.type == 2">
-					<input type="number" step="0.001" required
-					ng-show = "Answer.text != null"
-					ng-repeat="Answer in myQuestions[$index].answers" placeholder="Your Answer for ({{$index+1}})"
-					ng-model="myAnswers.answer[$parent.$index][$index]" class="keyans"/>
+				<div ng-show="myQuestion.type == 2" ng-if="myQuestion.questionState != 'answered'">
 					<p ng-click="selectAnswer($index,0)" class="keybtn">Submit</p>
 				</div>
 				<div class="feedback">
@@ -68,16 +78,83 @@
 					<div class="btn" ng-click="selectContinue($index)" ng-show="continuetohide($index)">Continue</div>
 				</div>
 			</div>
-			<div class="results  {{(totalQuestions === activeQuestion) ? 'active' : 'inactive'}}" ng-show="resulting()">
+			<div class="results  {{(totalQuestions === activeQuestion) ? 'active' : 'inactive'}} visibilityhide" id="resultshow" ng-show="resulting()">
 				<h3>Results</h3>
 				<p>You scored {{percentage | number:2}}% for the latest test<span ng-if="maxile > 0">, and now your maxile level is {{maxile}}</span>.</p>
 				<p>Use the links below to report your achievement.</p>
 				<div class="share" ng-bind-html = "createShareLinks(percentage)" compile-template></div>
 				<div><a ng-click="logout()" class="btn end" href="#">End Test</a></div>
 			</div>
-			<div class="footer">All Gifted Copyright Reserved from 2014</div>
+			<!-- codes for the calculator -->
+			<div id="scientificCalc11" ng-show="calculator" class="visibilityhide" > 
+				<div id="errmsg" ></div>
+				<div id="results"></div>  
+				<table style="width:250px;">
+				  <tr>
+				    <td class="cell"><input type="button" class='calcbttn'  value="7"  id="7" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="8"  id="8" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="9"  id="9" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="/"  id="divide" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="("  id="parenleft" /></td> 
+				  </tr>
+				 
+				   <tr>
+				    <td class="cell"><input type="button" class='calcbttn'  value="4"  id="4" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="5"  id="5" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="6"  id="6" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="*"  id="multiply" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value=")"  id="parenright" /></td> 
+				  </tr> 
+				   <tr>
+				    <td class="cell"><input type="button" class='calcbttn'  value="1"  id="1" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="2"  id="2" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="3"  id="3" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="+"  id="plus" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="C"  id="clear" /></td> 
+				  </tr> 
+				    <tr>
+				    <td class="cell"><input type="button" class='calcbttn'  value="0"  id="0" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="."  id="decimal" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="-"  id="minus" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="^"  id="^" /></td>
+				    <td class="cell"><input type="button" class='calcbttn'  value="="  id="evaluate" /></td> 
+				  </tr>
+				    <tr>
+				      <td class="cell"><input type="button" class='calcbttn'  value="abs"  id="abs" /></td>
+				      <td class="cell"><input type="button" class='calcbttn'  value="sin"  id="sin" /></td>
+				      <td class="cell"><input type="button" class='calcbttn'  value="cos"  id="cos" /></td>
+				      <td class="cell"><input type="button" class='calcbttn'  value="tan"  id="tan" /></td>
+				      <td class="cell"><input type="button" class='calcbttn'  value="del"  id="del" /></td>
+				    </tr>
+				    <tr>
+				      <td class="cell"><input type="button" class='calcbttn'  value="log10"  id="log10" /></td>
+				      <td class="cell"><input type="button" class='calcbttn'  value="log2"  id="log2" /></td>
+				      <td class="cell"><input type="button" class='calcbttn'  value="ln"  id="ln" /></td>
+				      <td class="cell"><input type="button" class='calcbttn'  value="pi"  id="pi" /></td>
+				      <td class="cell"><input type="button" class='calcbttn'  value="sqrt"  id="sqrt" /></td>
+				    </tr>
+				</table>
+				<input type="radio" name="raddeg" value="radians"  id="radians_rb"/> Radians   <input type="radio" name="raddeg" value="degrees" checked id="degrees_rb" />   degrees
+			<!-- REMOVING THE TEXT BELOW VIOLATES THE TOS OF USING THIS SCRIPT -->
+				<span style="font-size:8px; font-style:italic;">by www.meta-calculator.com</span>
+			</div>
+
+			<div class="footer"><span ng-show="activeQuestion != '-1'">
+				<i ng-click="scratchpadSwitch()" class="fa fa-pencil-square-o"></i>
+				<i ng-click="calculatorSwitch()" class="fa fa-calculator"></i></span>Copyrighted by All Gifted LLC
+			</div>
 		</div>
-		<script type="text/javascript" src="js/angular.min.js"></script>
+		<!-- dependency: React.js -->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-with-addons.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
+		<script type="text/javascript" src="js/literallycanvas.min.js"></script>
+	    <script>
+	        LC.init(
+	            document.getElementsByClassName('my-drawing')[0],
+	            {imageURLPrefix: '/static/img'}
+	        );
+	    </script>
+    	<script type="text/javascript" src="js/angular.min.js"></script>
 		<!-- Angular cookie wrapper library for client cookies -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-cookies.js"></script>
 		<!-- Angular's Router Library for SPA -->
@@ -98,5 +175,7 @@
 	    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/katex.min.js"></script>
 	    <script src="//tfoxy.github.io/b/katex/dist/contrib/auto-render.min.js"></script>
 	    <script src="//tfoxy.github.io/b/angular-katex/angular-katex.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script type="text/javascript" src="js/calculator.js"></script>
     </body>
 </html>
