--- a/index.html
+++ b/index.html
@@ -12,24 +12,14 @@
 		<script type="text/javascript" src="https://cdn.auth0.com/js/lock-9.2.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="icon" href="/faith.png">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script>
-			$(document).ready(function(){
-				$('#mastercodeunenroll').removeClass("visibilityhide");
-				$('#scientificCalc11').removeClass("visibilityhide");
-				$('#scratchpadshow').removeClass("visibilityhide");
-				$('#mathquestionshow').removeClass("visibilityhide");
-				$('#resultshow').removeClass("visibilityhide");
-				$('#progressshow').removeClass("visibilityhide");
-			});			
-		</script>
+		
 	</head>
 	<body>
-	<span us-spinner="{radius:30, width:8, length: 16}"></span>
+		<span us-spinner="{radius:30, width:8, length: 16}"></span>
 		<div id="mathQuiz" ng-controller="QuizController">
-			<div ng-show="scratchpad" class="my-drawing"></div>				
-			<div class="header"><h1>All Gifted<span>Mathematics</span></h1>
-				<div class="progress">
+			<div ng-show="scratchpad" class="my-drawing visibilityhide" id="scratchpadshow"></div>				
+			<div class="header noselect"><h1>All Gifted<span ng-if="activeQuestion === -1">Mathematics</span></h1>
+				<div class="progress visibilityhide" id="progressshow">
 					<div class="
 					{{($index === activeQuestion) ? 'on':'off'}}
 					{{ (myQuestion.questionState === 'answered') ? 'answered' : 'unanswered'}} 
@@ -37,13 +27,13 @@
 					ng-repeat="myQuestion in myQuestions"></div>
 				</div>
 			</div>
-			<div class="intro {{ (activeQuestion > -1) ? 'inactive' :'active'}}">
+			<div class="intro noselect {{ (activeQuestion > -1) ? 'inactive' :'active'}}">
 				<div ng-if="enrolled">
 					<h2>Welcome</h2>
  					<p>Click to start Adaptive Kindergarten to Primary Six Math course</p>
  					<div ng-click="login()" class="startbtn">START <i class="fa fa-chevron-right"></i></div>
 				</div>
-				<div ng-if="!enrolled">
+				<div ng-if="!enrolled" class="visibilityhide" id="mastercodeunenroll">
 					<h3>Mastercode Registration Needed<br> <input type="number" class="mastercode" ng-model="mastercode.mastercode" placeholder="Mastercode"></h3>
 					<p><input type="text" ng-model = "mastercode.firstname" placeholder="First Name" class="mastercode" required>
 					<input type="text" ng-model = "mastercode.lastname" placeholder="Last Name" class="mastercode" required>
@@ -51,8 +41,8 @@
 					<p ng-click="sendMastercode()" class="startbtn">SUBMIT <i class="fa fa-chevron-right"></i></p>
 				</div>
 			</div>
-			<div class="question 
-				{{ $index === activeQuestion ? 'active':'inactive'}} {{ myQuestion.questionState === 'answered' ? 'answered':'unanswered'}}" ng-repeat="myQuestion in myQuestions" ng-show="questionshowing($index)" >
+			<div class="question noselect
+				{{ $index === activeQuestion ? 'active':'inactive'}} {{ myQuestion.questionState === 'answered' ? 'answered':'unanswered'}} visibilityhide" ng-repeat="myQuestion in myQuestions" ng-show="questionshowing($index)" id="mathquestionshow">
 				<div katex bind="myQuestion.question" auto-render class="txt" id="question_{{myQuestion.id}}"></div>
 				<p><img ng-if="myQuestion.question_image" class="question_image" ng-src="{{baseurl}}{{myQuestion.question_image}}" onContextMenu="return false;"/></p>
 				<div ng-show="myQuestion.type == 1">
@@ -65,10 +55,10 @@
 							selected: isSelected($parent.$index, $index),
 							correct: isCorrect($parent.$index, $index)
 						}" 
-						ng-click="selectAnswer($parent.$index, $index)" 
+						ng-click="selectAnswer($parent.$index, $index)"
 						class="ans"></div>						
 				</div>
-				<div ng-show="myQuestion.type == 2"  ng-if="myQuestion.questionState != 'answered'">
+				<div ng-show="myQuestion.type == 2" ng-if="myQuestion.questionState != 'answered'">
 					<p ng-click="selectAnswer($index,0)" class="keybtn">Submit</p>
 				</div>
 				<div class="feedback">
@@ -86,7 +76,7 @@
 				<div><a ng-click="logout()" class="btn end" href="#">End Test</a></div>
 			</div>
 			<!-- codes for the calculator -->
-			<div id="scientificCalc11" ng-show="calculator"> 
+			<div id="scientificCalc11" ng-show="calculator" class="visibilityhide" > 
 				<div id="errmsg" ></div>
 				<div id="results"></div>  
 				<table style="width:250px;">
@@ -145,6 +135,17 @@
 			</div>
 		</div>
 		<!-- dependency: React.js -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script>
+			$(document).ready(function(){
+				$('#mastercodeunenroll').removeClass("visibilityhide");
+				$('#scientificCalc11').removeClass("visibilityhide");
+				$('#scratchpadshow').removeClass("visibilityhide");
+				$('#mathquestionshow').removeClass("visibilityhide");
+				$('#resultshow').removeClass("visibilityhide");
+				$('#progressshow').removeClass("visibilityhide");
+			});			
+		</script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-with-addons.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
 		<script type="text/javascript" src="js/literallycanvas.min.js"></script>
