--- a/index.html
+++ b/index.html
@@ -12,22 +12,12 @@
 		<script type="text/javascript" src="https://cdn.auth0.com/js/lock-9.2.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="icon" href="/faith.png">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script>
-			$(document).ready(function(){
-				$('#mastercodeunenroll').removeClass("visibilityhide");
-				$('#scientificCalc11').removeClass("visibilityhide");
-				$('#scratchpadshow').removeClass("visibilityhide");
-				$('#mathquestionshow').removeClass("visibilityhide");
-				$('#resultshow').removeClass("visibilityhide");
-				$('#progressshow').removeClass("visibilityhide");
-			});			
-		</script>
+		
 	</head>
 	<body>
 		<span us-spinner="{radius:30, width:8, length: 16}"></span>
 		<div id="mathQuiz" ng-controller="QuizController">
-			<div ng-show="scratchpad" class="my-drawing" id="scratchpadshow"></div>				
+			<div ng-show="scratchpad" class="my-drawing visibilityhide" id="scratchpadshow"></div>				
 			<div class="header noselect"><h1>All Gifted<span ng-if="activeQuestion === -1">Mathematics</span></h1>
 				<div class="progress visibilityhide" id="progressshow">
 					<div class="
@@ -145,6 +135,17 @@
 			</div>
 		</div>
 		<!-- dependency: React.js -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script>
+			$(document).ready(function(){
+				$('#mastercodeunenroll').removeClass("visibilityhide");
+				$('#scientificCalc11').removeClass("visibilityhide");
+				$('#scratchpadshow').removeClass("visibilityhide");
+				$('#mathquestionshow').removeClass("visibilityhide");
+				$('#resultshow').removeClass("visibilityhide");
+				$('#progressshow').removeClass("visibilityhide");
+			});			
+		</script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-with-addons.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
 		<script type="text/javascript" src="js/literallycanvas.min.js"></script>
