--- a/backup/index.html
+++ b/backup/index.html
@@ -70,6 +70,7 @@
 			</div>
 			<div class="results  {{(totalQuestions === activeQuestion) ? 'active' : 'inactive'}}" ng-show="resulting()">
 				<h3>Results</h3>
+				<p>Hello{{message}}</p>
 				<p>You scored {{percentage | number:2}}% for the latest test<span ng-if="maxile > 0">, and now your maxile level is {{maxile}}</span>.</p>
 				<p>Use the links below to report your achievement.</p>
 				<div class="share" ng-bind-html = "createShareLinks(percentage)" compile-template></div>
