add details of test

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 			</div>
 			<div class="results  {{(totalQuestions === activeQuestion) ? 'active' : 'inactive'}} visibilityhide" id="resultshow" ng-show="resulting()">
 				<h3>Results</h3>
+				<br>
+				<p>{{resultmsg}}</p>
 				<p>You scored {{percentage | number:2}}% and {{kudos}} kudos for the latest test<span ng-if="maxile > 0">, and now your maxile level is {{maxile}}</span>.</p>
 				<p>What do you want to do next?</p>
 				<div class="share" ng-bind-html = "createShareLinks(percentage)" compile-template></div>
