--- a/index.html
+++ b/index.html
@@ -18,23 +18,51 @@
 		<span us-spinner="{radius:30, width:8, length: 16}"></span>
 		<div id="mathQuiz" ng-controller="QuizController">
 			<div ng-show="scratchpad" class="my-drawing visibilityhide" id="scratchpadshow"></div>				
-			<div class="header noselect"><h1>All Gifted<span ng-if="activeQuestion === -1">Mathematics</span></h1>
-				<div class="progress visibilityhide" id="progressshow">
+			<div class="header noselect">
+				<img id="logo" src="logo_resized75px.jpg" ng-show="unauthenticated">
+				<!--<div class="progress visibilityhide" id="progressshow">
 					<div class="
 					{{($index === activeQuestion) ? 'on':'off'}}
 					{{ (myQuestion.questionState === 'answered') ? 'answered' : 'unanswered'}} 
 					{{ (myQuestion.correctness === 'correct') ? 'correct' : 'incorrect'}}"
 					ng-repeat="myQuestion in myQuestions"></div>
-				</div>
+				</div>-->
 				<div class="question noselect      active answered" ng-repeat="myQuestion in myQuestions" ng-show="questionshowing($index)" id="mathquestionshow">
-					<p id="exit" ng-click="logout()" class="btn end" href="#">Exit test</p>
+					<img src="caret.png" id="exit" ng-click="logout()" href="#">
 				</div>
 			</div>
 			<div class="intro noselect {{ (activeQuestion > -1) ? 'inactive' :'active'}}">
 				<div ng-if="enrolled">
-					<h2>Welcome</h2>
- 					<p>Click to start Adaptive Kindergarten to Primary Six Math course</p>
- 					<div ng-click="login()" class="startbtn">START <i class="fa fa-chevron-right"></i></div>
+					<div id="welcome" ng-if="welcome" ng-show="showwelcome">
+						<h2>Welcome back, {{firstname}}!</h2>
+ 						<!--<p>Click to start Adaptive Kindergarten to Primary Six Math course</p>-->
+ 					</div>
+ 					<div class="buttonsdiv">
+	 					<div ng-show="unauthenticated" id='login' ng-click="login('test')" class="startbtn">LOGIN</div><br ng-show="unauthenticated">
+	 					<div ng-show="showcontinue" class='adjdivs'>
+	 							<div id='continue' ng-click="menu('continue')" class="startmenu startbtn">CONTINUE</div><br>
+	 							<p>from where you left off</p>
+	 					</div>
+	 					<div ng-show="showtest" id='recaldiv' class='adjdivs'>
+	 						<div id='test' ng-click="menu('test')" class="startmenu startbtn">TEST</div><br>
+	 						<p>your level!</p>
+	 					</div>
+	 					<div ng-show="showskills">
+	 						<div id='skills' ng-click="menu('skills')" class="startmenu startbtn">SUBJECT SELECT</div><br>
+	 						<p>Practice any subject!</p>
+	 					</div>
+						<div ng-show="trackbuttons" class="grid-container">
+							<div class="grid-item" ng-repeat= "track in tracks" ng-click="tracktest(track.id)">
+								<div class="grid-text">
+									{{track.description}}
+								</div>
+								<div class="trackprogressbar" id="{{track.id}}"></div>	
+								<div class="trackprogressbarvoid"></div>	
+							</div>
+						</div>
+						<br ng-show="trackbuttons">
+	 					<div ng-show="showback"  id='back' ng-click="menu('back')" class="startmenu startbtn">Back <i class="fa fa-chevron-right"></i></div>
+	 				</div>
 				</div>
 				<div ng-if="!enrolled" class="visibilityhide" id="mastercodeunenroll">
 					<h3>Mastercode Registration Needed<br> <input type="number" class="mastercode" ng-model="mastercode.mastercode" placeholder="Mastercode"></h3>
@@ -44,11 +72,22 @@
 					<input type="datetime" ng-model = "mastercode.date_of_birth" placeholder="Birthdate in mm/dd/yyyy" class="mastercode" required></p>
 					<p ng-click="sendMastercode()" class="startbtn">SUBMIT <i class="fa fa-chevron-right"></i></p>
 				</div>
+
 			</div>
 			<div class="question noselect
 				{{ $index === activeQuestion ? 'active':'inactive'}} {{ myQuestion.questionState === 'answered' ? 'answered':'unanswered'}} visibilityhide" ng-repeat="myQuestion in myQuestions" ng-show="questionshowing($index)" id="mathquestionshow">
+				<div ng-repeat="question in questions">
+					<div ng-if="question.id === myQuestion.id">
+						<h1>{{ question.skill.tracks[0].track }}</h1>
+						<div class="trackprogressbar" id="{{ question.skill.tracks[0].id }}"></div>	
+						<div class="trackprogressbarvoid"></div>
+					</div>
+				</div>
 				<div katex bind="myQuestion.question" auto-render class="txt" id="question_{{myQuestion.id}}"></div>
 				<p><img ng-if="myQuestion.question_image" class="question_image" ng-src="{{baseurl}}{{myQuestion.question_image}}" onContextMenu="return false;"/></p>
+				<div ng-show="myQuestion.type == 2" ng-if="myQuestion.questionState != 'answered'">
+					<p ng-click="selectAnswer($index,0)" id="questionanswerbutton"class="keybtn">Submit</p>
+				</div>
 				<div ng-show="myQuestion.type == 1">
 					<div katex bind="Answer.text" auto-render
 						ng-repeat="Answer in myQuestions[$index].answers"
@@ -62,9 +101,7 @@
 						ng-click="selectAnswer($parent.$index, $index)"
 						class="ans"></div>						
 				</div>
-				<div ng-show="myQuestion.type == 2" ng-if="myQuestion.questionState != 'answered'">
-					<p ng-click="selectAnswer($index,0)" class="keybtn">Submit</p>
-				</div>
+
 				<div class="feedback">
 					<p ng-show="myQuestion.correctness === 'correct'">You are <strong>correct</strong>!</p>
 					<p ng-show="myQuestion.correctness === 'incorrect'">Oops! That is <strong>not correct.</strong></p>
@@ -72,6 +109,18 @@
 					<div class="btn" ng-click="selectContinue($index)" ng-show="continuetohide($index)">Continue</div>
 				</div>
 			</div>
+			<div katex bind="Answer.text" auto-render
+						ng-repeat="Answer in myQuestions[$index].answers"
+						ng-show = "Answer.text != null || Answer.image != null"
+						ng-style="{ 'background-image':'url({{baseurl}}{{Answer.image}})'}"
+						ng-class="{
+							image:Answer.image,
+							selected: isSelected($parent.$index, $index),
+							correct: isCorrect($parent.$index, $index)
+						}" 
+						ng-click="selectAnswer($parent.$index, $index)"
+						class="ans">
+			</div>	
 			<div class="results  {{(totalQuestions === activeQuestion) ? 'active' : 'inactive'}} visibilityhide" id="resultshow" ng-show="resulting()">
 				<h3>Results</h3>
 				<br>
